--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node server.js",
-        "seed": "node seeds/seed.js"
+        "seed": "node seeds/seed.js",
+        "tailwind": "npx tailwindcss -i ./public/css/style.css -o ./build/css/style.css --watch"
     },
     "keywords": [],
     "author": "",
@@ -25,3 +26,4 @@
         "tailwindcss": "^3.3.6"
     }
 }
+
